AC_INIT
AC_CONFIG_SRCDIR([Makefile.am])
#AC_PREREQ(2.61)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_HEADERS([config/config.h])
AM_INIT_AUTOMAKE(tclap,1.2.0)
AC_PROG_CXX
AC_CXX_HAVE_SSTREAM
AC_CXX_HAVE_STRSTREAM
AC_CXX_HAVE_LONG_LONG
AC_CHECK_PROG(DOT,dot,YES,NO)
AC_PROG_RANLIB
AC_PROG_INSTALL
BB_ENABLE_DOXYGEN

AM_CONDITIONAL([HAVE_GNU_COMPILERS], [test x$ac_cv_cxx_compiler_gnu = xyes])

AC_CONFIG_FILES([ Makefile \
	   tclap.pc
		   include/Makefile \
		   include/tclap/Makefile \
		   config/Makefile])
#AC_CONFIG_COMMANDS([default],[\
#		   chmod a+x $ac_top_srcdir/tests/*.sh],[])
AC_OUTPUT

#          examples/Makefile
#		   docs/Makefile
#		   docs/Doxyfile
#		   msc/Makefile
#		   msc/examples/Makefile
#		   tests/Makefile
